fix(ui): Alignment of app name for deploy

--- a/static/less/base.less
+++ b/static/less/base.less
@@ -116,7 +116,8 @@ header {
     font-size: 20px;
     vertical-align: middle;
     display: inline-block;
-    margin: 5px 0 0 10px;
+    margin: 0;
+    margin-left: 10px;
   }
 }
 .page-header {
